fix(VField): label opacity flicker (#15840)
closes #15481

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -207,7 +207,6 @@
   .v-field--active &
     visibility: hidden
 
-  .v-field--disabled &,
   .v-field--focused &,
   .v-field--error &
     opacity: 1
